--- a/main.css
+++ b/main.css
@@ -1,6 +1,8 @@
 body {
   background-color: grey;
   flex-direction: row;
+  padding-top: 55px;
+  padding-bottom: 20px;
 }
 .container{
   display: flex;
@@ -10,9 +12,10 @@ body {
 
 #card.profile-card{
 height: 100%;
-display: flex;
-padding: 100px;
-margin: 100px;
+display:flex;
+padding: 300px;
+margin: 300px;
+flex-wrap: wrap;
 }
 
 #navigation{
